# k8s_practice

./: Dockerfile  README.md  makefile  pyproject.toml
flask_k8s_practice/: coingecko_api.py
k8s/: coingecko_api.yaml  coingecko_api_ingress.yaml  coingecko_api_service.yaml
templates/: base.html  index.html
tests/: test_flask_k8s_practice.py
